--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "LAZACK MD V2",
-  "description": "WhatsApp Bot Base using Baileys. Written in javascript",
+  "name": "SILVA V6",
+  "description": "WhatsApp Bot Base using Baileys. Written in javascript. User friendly",
   "keywords": [
     "whatsapp bot",
     "ShizoBot",
