--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 { 
-    "name": "OREO-BOT",
+    "name": "SILVA-BOT",
     "version": "2.0.4",
-    "description": "WhatsApp Bot created with the help of ShizoBot-base using Baileys. Written in javascript",
+    "description": "WhatsApp Bot created with the help of SILVA-base using Baileys. Written in javascript",
     "main": "index.js",
     "type": "module",
     "directories": {
@@ -21,16 +21,16 @@
     "Termux-WaBot",
     "WaBot-Base"
   ],
-    "homepage": "https://github.com/shizothetechie/oreo-bot",
+    "homepage": "https://github.com/SilvaTechB/silva-v6",
     "author": {
         "name": "shizo"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/shizothetechie/oreo-bot.git"
+        "url": "git+https://github.com/SilvaTechB/silva-v6.git"
     },
     "bugs": {
-        "url": "https://github.com/shizothetechie/oreo-bot/issues"
+        "url": "https://github.com/SilvaTechB/silva-v6/issues"
     },
     "license": "GPL-3.0-or-later",
     "dependencies": {
